Correction d'une couleur en version tablette et mobile

--- a/css/style_admin.css
+++ b/css/style_admin.css
@@ -306,7 +306,7 @@ form select:focus {
     }
 
     nav {
-        background-color: #374d5c;
+        background-color: #222222;
         padding: 10px;
         border-radius: 25px;
         display: grid;
